<resources>
    <string name="app_name">AndroidChatApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="title_activity_chat_overview">ChatOverviewActivity</string>
    <string name="label_chat_overview">ChatOverview</string>
    <string name="register_error_fill_all_fields">Please fill in all fields.</string>
    <string name="register_error_pass_length">Passwords should be at least 6 chars long</string>
    <string name="register_error_password_not_equal">Passwords are not the same</string>
    <string name="label_new_chat_fragment">NewChatFragment</string>
    <string name="help_are_you_sure">Are you sure?</string>
    <string name="help_logout_text">You are about to log out, are you sure?</string>
    <string name="help_no">NO</string>
    <string name="help_yes">YES</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="toolbar_title">ChatApp</string>
    <string name="no_chats_yet">You have no recent chats, start one by clicking on button in the bottom right!</string>
    <string name="no_other_users">Currently there are no other users you can chat with. How about you invite a friend?</string>
    <string name="button_send">Send</string>
</resources>